tests/errors/syntax_errors/import_star.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from dict_str_keys import *

print(a)
